third_party/move/move-compiler-v2/tests/match-checks/wildcard_unreachable.exp

Diagnostics:
error: unreachable pattern
   ┌─ tests/match-checks/wildcard_unreachable.move:14:13
   │
14 │             _ => 5,
   │             ^

error: unreachable pattern
   ┌─ tests/match-checks/wildcard_unreachable.move:22:13
   │
22 │             (X::A, X::A) => 2,
   │             ^^^^^^^^^^^^
